provenance_label > provenance_id

--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -81,12 +81,12 @@ Provenance:
     - stem == 'provenance'
     - extension == '.tsv'
   initial_columns:
-    - provenance_label
+    - provenance_id
   columns:
-    provenance_label:
+    provenance_id:
       level: required
       description_addendum: |
         There MUST be exactly one row for each `prov-<label>` entity.
     description__provenance: optional
-  index_columns: [provenance_label]
+  index_columns: [provenance_id]
   additional_columns: allowed
