[ENH] BEP 020 Eye Tracking (#1128)
* minor update md

* final changes and working version with mkdocs

* add forgotten example

* final changes

* latest changes

* Update 10-eye-tracking.md

correction of text

* Apply suggestions from code review

* fix bad latin

* md lint

* fix yml

* md lint

* lint yml

* add semantic line breaks

* move suffix

* rm CogPOID and CogAtlas yml

* move some metadata

* move more metadata

* move more metadata

* rely on task.yml for events

* change extension to tsv

* fix schema

* fix links

* fix typos

* fix link

* most of the change but mkserve not working yet

* some more change still not working

* change in mkdocs.yml based on commments

* run pre-commit and fix yml

* add eyetrack modality object

* format markdown

* format markdown

* space missing in tabular_data/eyetrack.yaml

* fixing conflict for real

* automatic changes by pre-commit

* instru

* pre-commit stuff

* correct error of manipulation of logo.eps

* some test

* some test

* some test

* some test

* changes of columns names

* Update src/modality-specific-files/eye-tracking.md

Co-authored-by: Taylor Salo <tsalo90@gmail.com>

* change in metadata

* test new changes with pre-commit

* correct error in eyetrack.md

* add RecordTimeStart and RecordTimeEnd

* cahnge eye_sample to eye_timestamp

* correct error example json

* error in datasets links

* last round of review on main doc

* slight modif of SAOI

* slight modif of main md

* correction of space

* try without modality

* Update src/modality-specific-files/eye-tracking.md

Co-authored-by: Yaroslav Halchenko <debian@onerussian.com>

* put back mkdocs.yaml with unsorted modality specific files

* Update src/modality-specific-files/eye-tracking.md

Co-authored-by: Taylor Salo <tsalo90@gmail.com>

* Update src/schema/objects/metadata.yaml

Co-authored-by: Taylor Salo <tsalo90@gmail.com>

* Update src/schema/objects/metadata.yaml

Co-authored-by: Taylor Salo <tsalo90@gmail.com>

* Update src/sch

--- a/src/schema/rules/sidecars/continuous.yaml
+++ b/src/schema/rules/sidecars/continuous.yaml
@@ -14,12 +14,51 @@ Continuous:
     StartTime: required
     Columns: required
 
-# Other recommended metadata for physiological data
 PhysioHardware:
   selectors:
     - suffix == "physio"
   fields:
-    Manufacturer: recommended
-    ManufacturersModelName: recommended
-    SoftwareVersions: recommended
-    DeviceSerialNumber: recommended
+    DeviceSerialNumber: optional
+    Manufacturer: optional
+    ManufacturersModelName: optional
+    SoftwareVersions: optional
+
+PhysioTypeRecommended:
+  selectors:
+    - suffix == "physio"
+  fields:
+    PhysioType: recommended
+
+PhysioTypeRequired:
+  selectors:
+    # Avoid automated validation; this is for the sake of rendering a table.
+    - "false"
+  fields:
+    PhysioType: required
+
+PhysioEvents:
+  selectors:
+    - suffix == "physioevents"
+  fields:
+    Columns: required
+    Description: recommended
+    OnsetSource: required
+
+# Eye-tracking
+EyeTrack:
+  selectors:
+    - suffix == "physio"
+    - sidecar.PhysioType == "eyetrack"
+  fields:
+    RecordedEye: required
+    SampleCoordinateSystem: required
+    AverageCalibrationError: optional
+    CalibrationCount: optional
+    CalibrationPosition: optional
+    CalibrationType: optional
+    CalibrationUnit: optional
+    EyeTrackerDistance: optional
+    EyeTrackingMethod: optional
+    MaximalCalibrationError: optional
+    PupilFitMethod: optional
+    RawDataFilters: optional
