--- a/src/schema/meta/associations.yaml
+++ b/src/schema/meta/associations.yaml
@@ -101,6 +101,14 @@ electrodes:
       - space
   inherit: true
 
+physio:
+  selectors:
+    - extension != '.json'
+  target:
+    suffix: physio
+    extension: .tsv.gz
+  inherit: false
+
 coordsystems:
   selectors:
     - datatype == 'emg'
