--- a/src/schema/meta/context.yaml
+++ b/src/schema/meta/context.yaml
@@ -156,6 +156,9 @@ properties:
             type: array
             items:
               type: string
+          sidecar:
+            description: 'Sidecar metadata constructed via the inheritance principle'
+            type: object
       aslcontext:
         description: 'ASL context file'
         type: object
@@ -298,6 +301,17 @@ properties:
             type: array
             items:
               type: string
+      physio:
+        description: 'Physiological recording file'
+        type: object
+        required: [path]
+        properties:
+          path:
+            description: 'Path to associated physio file'
+            type: string
+          sidecar:
+            description: 'Sidecar metadata constructed via the inheritance principle'
+            type: object
       atlas_description:
         description: 'Atlas description file'
         type: object
