--- a/src/schema/rules/files/raw/task.yaml
+++ b/src/schema/rules/files/raw/task.yaml
@@ -2,6 +2,7 @@
 timeseries:
   suffixes:
     - physio
+    - physioevents
     - stim
   extensions:
     - .tsv.gz
@@ -18,6 +19,7 @@ timeseries:
 timeseries__mri_no_task:
   suffixes:
     - physio
+    - physioevents
     - stim
   extensions:
     - .tsv.gz
