--- a/src/schema/rules/checks/pet.yaml
+++ b/src/schema/rules/checks/pet.yaml
@@ -5,6 +5,20 @@ PETFrameConsistency:
   issue:
     code: PET_FRAME_CONSISTENCY
     message: |
+      The number of frames as defined by FrameDuration and FrameTimesStart do not match in the
+      associated '.json' file.
+    level: error
+  selectors:
+    - suffix == 'pet'
+    - sidecar.FrameDuration
+    - sidecar.FrameTimesStart
+  checks:
+    - length(sidecar.FrameDuration) == length(sidecar.FrameTimesStart)
+
+PETFrameConsistencyFrameDuration:
+  issue:
+    code: PET_FRAME_CONSISTENCY_FRAME_DURATION
+    message: |
       The number of frames in this scan does not match the number of frames (as defined by FrameDuration) in the
       associated '.json' file.
     level: error
@@ -14,3 +28,17 @@ PETFrameConsistency:
     - sidecar.FrameDuration
   checks:
     - length(sidecar.FrameDuration) == nifti_header.dim[4]
+
+PETFrameConsistencyFrameTimesStart:
+  issue:
+    code: PET_FRAME_CONSISTENCY_FRAME_TIMES_START
+    message: |
+      The number of frames in this scan does not match the number of frames (as defined by FrameTimesStart) in the
+      associated '.json' file.
+    level: error
+  selectors:
+    - suffix == 'pet'
+    - type(nifti_header) != "null"
+    - sidecar.FrameTimesStart
+  checks:
+    - length(sidecar.FrameTimesStart) == nifti_header.dim[4]
