--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -48,12 +48,9 @@ Phenotypes:
         therefore the entry in the `participant_id` column will be repeated.
     session_id:
       level: optional
-      level_addendum: required if sessions are defined in the dataset
       description_addendum: |
-        A `session_id` column MUST be added to all tabular files in the phenotype directory
-        as soon as multiple sessions are present in the data set
-        regardless of whether those sessions are in the
-        `phenotype/` data, `sub-<label>/` data, or a combination of the two.
+        A `session_id` column SHOULD be added to all tabular files in the phenotype directory
+        as soon as multiple sessions are present in the data set.
     run_id:
       level: optional
       level_addendum: required if there are multiple runs within any session
