fix(schema): Check that entities.space is not null

--- a/src/schema/rules/sidecars/derivatives/common_derivatives.yaml
+++ b/src/schema/rules/sidecars/derivatives/common_derivatives.yaml
@@ -23,6 +23,7 @@ SpatialReferenceEntity:
 SpatialReferenceNonStandard:
   selectors:
     - dataset.dataset_description.DatasetType == "derivative"
+    - '"space" in entities'
     - '!intersects(schema.objects.metadata._StandardTemplateCoordSys, [entities.space])'
   fields:
     SpatialReference: required
