fix(schema): Use template entity, check if space is undefined

--- a/src/schema/rules/sidecars/derivatives/atlas.yaml
+++ b/src/schema/rules/sidecars/derivatives/atlas.yaml
@@ -2,9 +2,8 @@
 TemplateNonStandard:
   selectors:
     - dataset.dataset_description.DatasetType == "derivative"
-    - '!intersects(schema.objects.enums._StandardTemplateCoordSys.enum, [entities.tpl])'
-    - >
-      type(entities.space) == 'null' ||
-      !intersects(schema.objects.enums._StandardTemplateCoordSys.enum, [entities.space])
+    - '"template" in entities'
+    - type(entities.space) == 'null'
+    - '!intersects(schema.objects.enums._StandardTemplateCoordSys.enum, [entities.template])'
   fields:
     SpatialReference: required
