--- a/src/schema/objects/metadata.yaml
+++ b/src/schema/objects/metadata.yaml
@@ -357,6 +357,8 @@ BigDelta:
     In the context of a diffusion-weighted pulsed gradient spin echo sequence,
     corresponds to the time between the leading edges of two successive
     diffusion-encoding gradient pulses (Δ), specified in seconds.
+    The value may be an array, if Δ varies by volume, in which case the number
+    of values MUST correspond to the number of volumes in the data file.
   anyOf:
     - type: number
       unit: s
