--- a/src/schema/rules/tabular_data/modality_agnostic.yaml
+++ b/src/schema/rules/tabular_data/modality_agnostic.yaml
@@ -89,4 +89,4 @@ Provenance:
         There MUST be exactly one row for each `prov-<label>` entity.
     description__provenance: optional
   index_columns: [provenance_id]
-  additional_columns: allowed
+  additional_columns: allowed_if_defined
