Review from Ross and Chris, part 2
Co-authored-by: Chris Markiewicz <effigies@gmail.com>
Co-authored-by: Ross Blair <rosswilsonblair@gmail.com>

--- a/src/schema/objects/entities.yaml
+++ b/src/schema/objects/entities.yaml
@@ -264,7 +264,7 @@ processing:
     exploited.
   type: string
   format: label
-prov:
+provenance:
   name: prov
   display_name: Provenance group
   description: |
