--- a/src/schema/rules/checks/provenance.yaml
+++ b/src/schema/rules/checks/provenance.yaml
@@ -9,8 +9,8 @@ ProvenanceEntityMissing:
       the dataset.
     level: error
   selectors:
-    - datatype == 'provenance'
-    - suffix == '.tsv'
+    - suffix == 'provenance'
+    - extension == '.tsv'
   checks:
     - |
       allequal(
