Review from Ross and Chris, part 3
Co-authored-by: Ross Blair <rosswilsonblair@gmail.com>
Co-authored-by: Chris Markiewicz <effigies@gmail.com>

--- a/src/schema/rules/checks/provenance.yaml
+++ b/src/schema/rules/checks/provenance.yaml
@@ -14,6 +14,6 @@ ProvenanceEntityMissing:
   checks:
     - |
       allequal(
-        sorted(intersects(columns.provenance_id, dataset.subjects.participant_id)),
-        sorted(dataset.subjects.participant_id)
+        sorted(intersects(columns.provenance_id, dataset.prov.entities)),
+        sorted(dataset.prov.entities)
       )
